--- a/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/memoria/Consideraciones_generales.tex
+++ b/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/memoria/Consideraciones_generales.tex
@@ -51,7 +51,7 @@
 
     Todos los ejercicios se han incluido en un directorio independiente (comprimido), cada uno con el nombre del ejercicio que aparece en los guiones de prácticas, además de un ejercicio evaluable. \\
 
-    En cada uno de estos directorios contienen un archivo llamado \icode{memoria.pdf} que contiene un guion acerca del desarrollo del ejercicio. Además, algunos directorios incluyen una carpeta llamada \icode{images} que contiene imágenes relativas a la resolución del ejercicio. Todas ellas aparecen en los guiones referenciadas y algunas incluídas (no se han incluido todas directamente para facilitar la legibilidad del guion y que no fuese excesivamente largo).
+    En cada uno de estos directorios contienen un archivo llamado \icode{memoria.pdf} que contiene un guion acerca del desarrollo del ejercicio. Además, algunos directorios incluyen una carpeta llamada \icode{images} que contiene imágenes relativas a la resolución del ejercicio. Todas ellas aparecen en los guiones referenciadas y algunas incluidas (no se han incluido todas directamente para facilitar la legibilidad del guion y que no fuese excesivamente largo).
 
 
 \end{document}
