--- a/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/memoria/Monitorización_de_API_Web.tex
+++ b/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/memoria/Monitorización_de_API_Web.tex
@@ -127,6 +127,7 @@ services:
 \end{icodeblock}
 
 Y al archivo \icode{prometheus.yml} se le ha añadido un job para poder monitorizar la API:
+
 \begin{icodeblock}[yml]
 ---
 global:
@@ -151,29 +152,35 @@ sudo docker compose up
 
 Y hacemos lo mismo en el directorio \icode{Grafana_Prometheus_docker} para activar grafana y prometheus tenemos ya la configuración terminada.
 Se habilitan los siguientes puertos:
-- \icode{localhost:3000}: API de la Web de la ETSIIT
-- \icode{localhost:9090}: Prometheus monitorizando la API de la Web de la ETSIIT.
-- \icode{localhost:4000}: Grafana
+
+\begin{itemize}
+  \item \icode{localhost:3000}: API de la Web de la ETSIIT
+  \item \icode{localhost:9090}: Prometheus monitorizando la API de la Web de la ETSIIT.
+  \item \icode{localhost:4000}: Grafana
+\end{itemize}
 
 Y ya podremos comenzar con el ejercicio
 
 \subsection{Monitorización}
 
-En primer lugar crearemos los paneles que se piden en Grafana. Para ello abrimos Grafana y le especificamos en la configuración que coja datos de Prometheus (especificando el \icode{Data Source}).
+En primer lugar crearemos los paneles que se piden en Grafana. Para ello abrimos Grafana y le especificamos en la configuración que coja datos de Prometheus (especificando el \icode{Data Source}).\\
 
 Creamos ahora un nuevo Dashboard (en mi caso lo cree vacío solo para añadir los paneles requeridos). Dentro del Dashboard pasamos a crear los siguientes paneles:
 
 \subsubsection{Tiempo de Uso de la CPU}
+
 En el código del Query añadimos:
 
 \begin{icodeblock}
 rate(process_cpu_seconds_total[1m])
 \end{icodeblock}
 
-Y conseguimos el tiempo de uso de la CPU por segundo. Tocando un poco las leyendas y los estilos, poniéndolo de tipo Stat obtenemos el siguiente resultado (img37):
+Y conseguimos el tiempo de uso de la CPU por segundo. Modificando un poco las leyendas y los estilos, poniéndolo de tipo \icode{Stat} obtenemos el siguiente resultado (img37):
+
 \img{37}
 
 \subsubsection{Memoria disponible}
+
 Añadimos ahora dos Querys y ponemos:
 
 \begin{icodeblock}[bash]
@@ -184,21 +191,27 @@ nodejs_heap_size_used_bytes  # En la segunda
 Y conseguimos dos líneas temporales que indican la memoria usada y la memoria total en cada caso (img38).
 
 \img{38}
+
 \subsubsection{Tiempos de respuesta de los endpoints de la API}
-Añadimos ahora:
+
+Añadimos ahora (img39):
+
 \begin{icodeblock}[bash]
-histogram_quantile(0.95, sum(rate(prometheus_http_request_duration_seconds_bucket[\$__rate_interval])) by (le))
+histogram_quantile(0.95, sum(rate(prometheus_http_request_duration_seconds_bucket[$__rate_interval])) by (le))
 \end{icodeblock}
-(img39).
 
 \img{39}
-Ya podemos pasar a hacer la prueba de jMeter. Como jMeter estaba configurado para acceder a la API a través de \icode{localhost:3000} no tendremos que modificar nada en su configuración, simplemente ejecutar la prueba de carga.
+
+Ya podemos pasar a hacer la prueba de jMeter. Como jMeter estaba configurado para acceder a la API a través de \icode{localhost:3000} no tendremos que modificar nada en su configuración, simplemente ejecutar la prueba de carga.\\
 
 Al ejecutarlo tenemos inicialmente una situación como la siguiente (img40):
+
 \img{40}
-donde todo el sistema monitorizado parece en un estado de uso "bajo".
+
+donde todo el sistema monitorizado parece en un estado de uso "bajo".\\
 
 Al ejecutar la prueba tenemos el siguiente resultado (img41):
+
 \img{41}
 
 Donde se aprecia perfectamente un pico en las medidas tanto de tiempo de uso de CPU como de memoria usada y de tiempo de acceso.
