--- a/documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/resumen.tex
+++ b/documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/resumen.tex
@@ -54,6 +54,8 @@
         \end{gather*}
     \end{teo}
 
+    \newpage
+
     \section{Tema 4}
 
     \begin{teo}[\textbf{Test de Weierstrass}]
@@ -85,6 +87,8 @@
         \end{enumerate}
     \end{coro}
 
+    \newpage
+
     \section{Tema 6}
 
     \begin{teo}[\textbf{Caracterización de la existencia de primitiva}] Sea $\Omega$ un abierto no vacío de $\bb{C}$ y $f\in \cc{C}(\Omega)$. Las siguientes afirmaciones son equivalentes:
@@ -94,6 +98,8 @@
     \end{enumerate}
         
     \end{teo}
+
+    \newpage
 
     \section{Tema 7}
 
@@ -111,6 +117,8 @@
             f(z) = \frac{1}{2\pi i } \int_{C(a,r)} \frac{f(w)}{w-z} dw \hspace{1cm} \forall z \in D(a,r)
         \end{gather*}
     \end{prop}
+
+    \newpage
 
     \section{Tema 8}
     \begin{teo}[\textbf{Desarrollo en serie de Taylor}]
@@ -143,6 +151,8 @@
         \end{enumerate}
     \end{teo}
 
+    \newpage
+
     \section{Tema 9}
 
     \begin{prop}[\textbf{Desigualdades de Cauchy}] Sean $\Omega$ un abierto de $\bb{C}$, $f\in \cc{H}(\Omega)$ y $a\in \Omega$. Dado $r\in \bb{R}^+$ tal que $\overline{D}(a,r)\subset \Omega$, sea $M(f,a,r) = \max \{|f(z)|: z\in C(a,r)^*\}$. Se tiene entonces:
@@ -159,6 +169,8 @@
 
     \begin{prop}[\textbf{Principio de identidad para funciones holomorfas}] Sea $\Omega$ un dominio y $f,g\in \cc{H}(\Omega)$. Si $A$ es un subconjunto de $\Omega$ tal que $f(a) = g(a)$ para todo $a\in A$, y $A' \cap \Omega \neq \emptyset$, entonces $f$ y $g$ son idénticas: $f(z)=g(z)$ para todo $z\in \Omega$.
     \end{prop}
+
+    \newpage
 
     \section{Tema 10}
 
@@ -184,6 +196,8 @@
         \end{gather*}
     \end{teo}
 
+    \newpage
+
     \section{Tema 11}
 
     \begin{prop}[\textbf{Propiedad de la media}]
@@ -205,6 +219,8 @@
     \end{gather*}
     \end{teo}
 
+    \newpage
+
     \section{Tema 12}
 
     \begin{teo}[\textbf{Forma general del teorema de Cauchy y la fórmula integral de Cauchy}] Sea $\Omega$ un abierto del plano y $\Gamma$ un ciclo en $\Omega$, nul-homólogo con respecto a $\Omega$. Para toda función $f\in \cc{H}(\Omega)$ se tiene:
@@ -213,6 +229,8 @@
         \item $\displaystyle \int_\Gamma f(w) dw = 0$
     \end{enumerate}
     \end{teo}
+
+    \newpage
 
     \section{Tema 13}
 
@@ -257,10 +275,12 @@
     \begin{teo}[\textbf{Teorema de Casorati}] Las siguientes afirmaciones son equivalentes:
     \begin{enumerate}
         \item La función $f$ tiene una singularidad esencial en el punto $a$
-        \item Para cada $\delta \in \bb{R}^+$ con $D(a, \delta)\subset \Omega$, el conjunto $f(D(a, \delta)\setminus \{a\})$ es denso en $C$.
+        \item Para cada $\delta \in \bb{R}^+$ con $D(a, \delta)\subset \Omega$, el conjunto $f(D(a, \delta)\setminus \{a\})$ es denso en $\bb{C}$.
         \item Para cada $w\in \bb{C}$ existe una sucesión $\{z_n\}$ de puntos de $\Omega \setminus \{a\}$ tal que $\{z_n\} \to a$ y $\{f(z_n)\}\to w$. También existe una sucesión $\{u_n\}$ de puntos de $\Omega \setminus \{a\}$ tal que $\{u_n\} \to a$ y $\{f(u_n)\} \to \infty$.
     \end{enumerate}
     \end{teo}
+
+    \newpage
 
     \section{Tema 14}
 
