--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_2/p2.ipynb
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_2/p2.ipynb
@@ -37,13 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "7711f6db",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Title(msg):\n",
-    "    return Style.BRIGHT + Fore.BLACK + Back.WHITE + msg + Style.RESET_ALL"
+    "    return Style.BRIGHT + Fore.BLACK + Back.WHITE + msg + Style.RESET_ALL\n",
+    "\n",
+    "def Error(msg):\n",
+    "    return Style.BRIGHT + Fore.RED + msg + Style.RESET_ALL"
    ]
   },
   {
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "60752818",
    "metadata": {},
    "outputs": [],
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "eb5bbe75",
    "metadata": {},
    "outputs": [],
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "518b8d45",
    "metadata": {},
    "outputs": [
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "bb211569",
    "metadata": {},
    "outputs": [
@@ -258,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 168,
    "id": "50d91ae3",
    "metadata": {},
    "outputs": [],
@@ -268,17 +271,19 @@
     "def formula_derivacion_interpolatorio(x_values, order=1):\n",
     "\t# Creamos la función simbólica\n",
     "\tf = sp.Function('f')\n",
-    "\ta, h, x = sp.symbols('a,h,x') # a, h, x como variables simbólicas\n",
+    "\tx = sp.symbols('x') # x como variable simbólica\n",
+    "\n",
     "\ty_values = [f(xi) for xi in x_values]\n",
     "\tdata = list(zip(x_values, y_values))  # lista de tuplas (x,y) para los nodos de interpolación\n",
+    "\n",
     "\tinterpolated_poly = interpolate(data, x)\n",
     "\n",
-    "\treturn sp.diff(interpolated_poly,x,order)"
+    "\treturn sp.diff(interpolated_poly,x,order)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2f6a0b56",
    "metadata": {},
    "outputs": [],
@@ -297,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "20568eb7",
    "metadata": {},
    "outputs": [
@@ -570,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "17a729b4",
    "metadata": {},
    "outputs": [],
@@ -584,7 +589,7 @@
     "\t\"\"\"\n",
     "\n",
     "\tf = sp.Function('f')\n",
-    "\ta,h,x = sp.symbols('a,h,x')\n",
+    "\ta,x = sp.symbols('a,x')\n",
     "\tfseries = (f(x).series(x,a,n)).removeO()\n",
     "\ttaylor = []\n",
     "\n",
@@ -602,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "c69f5932",
    "metadata": {},
    "outputs": [
@@ -723,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "2ae155ec",
    "metadata": {},
    "outputs": [
@@ -756,6 +761,8 @@
     }
    ],
    "source": [
+    "# TODO\n",
+    "\n",
     "x = sp.symbols('x')\n",
     "\n",
     "# Definimos la función f(x)\n",
@@ -786,6 +793,195 @@
    "source": [
     "Implementa una función que acepte como argumentos una función en versión numérica `f`, un valor `a`, un valor `h`, un entero opcional `n` y un cuarto argumento que sea la fórmula de derivación numérica utilizada. La función deberá calcular la derivada `n`-ésima de la función `f` en el punto `a` utilizando la fórmula y el valor de `h` indicados. Las posibles fórmulas utilizadas deben incluir, al menos: diferencia regresiva, diferencia progresiva, diferencia centrada y diferencia centrada con 5 nodos. Para la función $$f(x) = \\sin(\\log(x^2+1)),$$ calcula el valor de $f'(-1)$, primero derivando una versión simbólica y obteniendo el valor exacto y después utilizando la función implementada con distintos valores de `h` y distintas fórmulas y comprueba las diferencias en la aproximación en cada caso."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "1a6a9795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CalcularDerivada(f_num, a_num, h_num, formula_der, n=1):\n",
+    "\t\"\"\"\n",
+    "\tFunción que calcula la derivada n-ésima de la función f en el punto a utilizando la fórmula de derivación y h dados\n",
+    "\tf_num: Función en versión numérica\n",
+    "\ta: Punto donde se quiere calcular la derivada\n",
+    "\th: Valor pequeño (para calcular los nodos)\n",
+    "\tn: Orden de la derivada a calcular\n",
+    "\tformula_der: Fórmula de derivación numérica que se quiera utilizar\n",
+    "\n",
+    "\tformula_der debe de estar entre las siguientes opciones: \n",
+    "\t\t\t\\\"diferencia regresiva\\\" \\\"diferencia progresiva\\\" \\\"diferencia centrada\\\" \\\"diferencia centrada 5 nodos\\\"\n",
+    "\t\"\"\"\n",
+    "\t\n",
+    "\terror = False\n",
+    "\n",
+    "\t# Defino a y h simbólicos para la función de derivación \n",
+    "\ta,h = sp.symbols('a,h')\n",
+    "\tf = sp.Function('f')\n",
+    "\n",
+    "\n",
+    "\tmatch formula_der:\n",
+    "\t\tcase \"diferencia regresiva\":\n",
+    "\t\t\tx_values = [a-h,a]\n",
+    "\t\tcase \"diferencia progresiva\":\n",
+    "\t\t\tx_values = [a,a+h]\n",
+    "\t\tcase \"diferencia centrada\":\n",
+    "\t\t\tx_values = [a-h, a+h]\n",
+    "\t\tcase \"diferencia centrada 5 nodos\":\n",
+    "\t\t\tx_values = [a-2*h, a-h,a, a+h, a+2*h]\n",
+    "\t\tcase _:\n",
+    "\t\t\tprint(Error(f\"ERROR: formula_der ({formula_der}) debe de estar entre las siguientes opciones: \"))\n",
+    "\t\t\tprint(Error(f\"       \\\"diferencia regresiva\\\" \\\"diferencia progresiva\\\" \\\"diferencia centrada\\\" \\\"diferencia centrada 5 nodos\\\"\"))\n",
+    "\t\t\terror = True\n",
+    "\t\n",
+    "\tif error==False : # Si la fórmula existe\n",
+    "\n",
+    "\t\tf_der = (formula_derivacion_interpolatorio(x_values, n)).subs({x: a_num}).simplify()\n",
+    "\n",
+    "\t\t# print(f\"La fórmula de derivación elegida es\")\n",
+    "\t\t# display(f_der)\n",
+    "\n",
+    "\t\tsustituciones = {}\n",
+    "\n",
+    "\t\tfor i in range(len(x_values)):\n",
+    "\t\t\t# Calculo el valor del nodo (sustituyo a por a_num y h por h_num)\n",
+    "\t\t\txi = x_values[i].subs({a: a_num, h: h_num})\n",
+    "\n",
+    "\t\t\t# Calculo la imagen del nodo por f_num\n",
+    "\t\t\tf_xi = f_num(float(xi))\n",
+    "\n",
+    "\t\t\t# Añado a las sustituciones la expresión f_der para cada f(xi) por su valor f_num(xi_calculado))\n",
+    "\t\t\tsustituciones[f(x_values[i])] = f_xi\n",
+    "\n",
+    "\t\t# Aplico las sustituciones anteriores (y de nuevo las de a y h por si queda alguna fuera de f(xi))\n",
+    "\t\treturn f_der.subs(sustituciones).subs({a: a_num, h: h_num}).evalf()\n",
+    "\t\n",
+    "\telse: # Si no existe devuelve 0\n",
+    "\t\treturn -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "d9123c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[30m\u001b[47mEvaluación de la función CalcularDerivada numéricamente:\u001b[0m\n",
+      "\t- Resultado \"exacto\" calculado con funciones simbólicas: -0.769238901363972\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia regresiva para h=0.1: -0.734950803404915\n",
+      "\t\tError: 0.0342880979590575\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia progresiva para h=0.1: -0.798389262969815\n",
+      "\t\tError: 0.0291503616058432\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia centrada para h=0.1: -0.766670033187365\n",
+      "\t\tError: 0.00256886817660718\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia centrada 5 nodos para h=0.1: -0.769257166015753\n",
+      "\t\tError: 0.0000182646517811191\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia regresiva para h=1e-06: -0.769238581943554\n",
+      "\t\tError: 3.19420417782545E-7\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia progresiva para h=1e-06: -0.769239220876905\n",
+      "\t\tError: 3.19512932889232E-7\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia centrada para h=1e-06: -0.769238901410230\n",
+      "\t\tError: 4.62575533433096E-11\n",
+      "\n",
+      "\t- Resultado obtenido con diferencia centrada 5 nodos para h=1e-06: -0.769238901391726\n",
+      "\t\tError: 2.77537992587895E-11\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prueba de la función anterior:\n",
+    "x = sp.symbols('x')\n",
+    "\n",
+    "# Definimos la función numérica:\n",
+    "f = lambda x: np.sin(np.log((x**2)+1))\n",
+    "\n",
+    "# Configuración de variables para el problema\n",
+    "a=-1         # Punto en el que se quiere calcular\n",
+    "h={0.1, 0.000001}        # Valor pequeño para el cálculo de su derivada numéricamente\n",
+    "n = 1        # Orden de derivación\n",
+    "\n",
+    "# Definimos la función simbólica:\n",
+    "f_sym = sp.sin(sp.log(x**2+1))\n",
+    "\n",
+    "# La derivamos n veces\n",
+    "f_der = sp.diff(f_sym, x, 1)\n",
+    "\n",
+    "# La evaluamos en a\n",
+    "res_exacto = f_der.subs({x: a}).evalf()\n",
+    "\n",
+    "print(Title(f\"Evaluación de la función CalcularDerivada numéricamente:\"))\n",
+    "print(f\"\\t- Resultado \\\"exacto\\\" calculado con funciones simbólicas: {res_exacto}\\n\")\n",
+    "\n",
+    "formulas = [\"diferencia regresiva\", \"diferencia progresiva\", \"diferencia centrada\", \"diferencia centrada 5 nodos\"]\n",
+    "for hi in h:\n",
+    "\tfor i in range(len(formulas)):\n",
+    "\t\tres = CalcularDerivada(f, a, hi, formulas[i] , n)\n",
+    "\t\terror = abs(res_exacto - res)\n",
+    "\t\tprint(f\"\\t- Resultado obtenido con {formulas[i]} para h={hi}: {res}\")\n",
+    "\t\tprint(f\"\\t\\tError: {error}\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2563938",
+   "metadata": {},
+   "source": [
+    "Como se puede observar el mejor resultado lo da la diferencia centrada en 5 nodos y el menor valor de h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f60cb282",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b4e27b3",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1acfb6a2",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c2bc5d0",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d72a35a5",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 10"
+   ]
   }
  ],
  "metadata": {
@@ -793,6 +989,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
