--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Prado/P2_Derivacion_Integracion_Numerica.ipynb
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Prado/P2_Derivacion_Integracion_Numerica.ipynb
@@ -2014,7 +2014,7 @@
         "ax.legend(loc=9)\n",
         "ax.set_xlabel('$x$',fontsize=18)\n",
         "ax.set_ylabel('$y$',fontsize=18)\n",
-        "ax.set_title('Fórmula compuesta de los rectángulos a la izquierda');"
+        "ax.set_title('Fórmula compuesta de los rectángulos a la izquierda')"
       ]
     },
     {
